adding curved fences to bop/aurora/abnormals/byg